# clarus

./: .gitignore  CMakeLists.txt  README.md  package.xml
Documents/: Notes.txt
Sources/: Clarus.cbp  Clarus.layout
Sources/clarus/: clarus.hpp  core.hpp  data.hpp  fit.hpp  io.hpp  model.hpp  vgram.hpp  vision.hpp  wnn.hpp
Sources/clarus/core/: bag.hpp  index.hpp  list.hpp  list_iterator.hpp  list_iterator_const.hpp  locker.cpp  locker.hpp  loop.cpp  loop.hpp  looper.cpp  looper.hpp  math.cpp  math.hpp  table.cpp  table.hpp  tuple.hpp
Sources/clarus/data/: table.hpp
Sources/clarus/fit/: ballot.hpp  line.cpp  line.hpp  ransac.hpp  samples.hpp
Sources/clarus/io/: camera.cpp  camera.hpp  command.cpp  command.hpp  console.cpp  console.hpp  gnuplot.cpp  gnuplot.hpp  viewer.cpp  viewer.hpp
Sources/clarus/model/: ballot_discrete.hpp  circle.cpp  circle.hpp  cloud.cpp  cloud.hpp  cluster.cpp  cluster.hpp  dbscan.cpp  dbscan.hpp  line.hpp  line2d.cpp  line2d.hpp  munkres.cpp  munkres.hpp  point.cpp  point.hpp  quadtree.hpp  ransac.hpp
Sources/clarus/vgram/: bitstring.hpp  intstring.cpp  intstring.hpp  layer.hpp  network.hpp  neuron.hpp  output.hpp
Sources/clarus/vision/: bayer.cpp  bayer.hpp  colors.cpp  colors.hpp  depths.cpp  depths.hpp  dither.hpp  filters.cpp  filters.hpp  fourier.cpp  fourier.hpp  images.cpp  images.hpp  segment.cpp
Sources/clarus/wnn/: layer.cpp  layer.hpp  minchinton.hpp  neuron.hpp  receptor.cpp  receptor.hpp  synapses.cpp  synapses.hpp  weightless.hpp
include/clarus/: core.hpp  fftw.hpp  vision.hpp
include/clarus/core/: automata.hpp  bag.hpp  bucket_sort.hpp  list.hpp  math.hpp  matrix.hpp  tuple.hpp  types.hpp
include/clarus/fftw/: buffer.hpp  correlate.hpp  cosine_search.hpp  plan.hpp  signal.hpp  signals.hpp
include/clarus/io/: camera.hpp  video.hpp
include/clarus/model/: point.hpp
include/clarus/vgram/: intstring.hpp  layer.hpp  network.hpp
include/clarus/vision/: colors.hpp  depths.hpp  filters.hpp  fourier.hpp  images.hpp  integral.hpp  logpolar.hpp
src/clarus/core/: automata.cpp  bag.cpp  list.cpp  math.cpp  matrix.cpp  types.cpp
src/clarus/fftw/: buffer.cpp  correlate.cpp  cosine_search.cpp  plan.cpp  signal.cpp  signal_domain_c.cpp  signal_domain_r.cpp  signals.cpp
src/clarus/io/: camera.cpp  http.cpp  speech.cpp  video.cpp
src/clarus/model/: line2d.cpp  point.cpp
src/clarus/vgram/: intstring.cpp
src/clarus/vision/: colors.cpp  cvmat.cpp  depths.cpp  filters.cpp  fourier.cpp  images.cpp  integral.cpp  logpolar.cpp
